--- a/Areas/HumanResource/Views/AttendanceHeads/Details.cshtml
+++ b/Areas/HumanResource/Views/AttendanceHeads/Details.cshtml
@@ -2,114 +2,143 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h4>Attendance Head Details</h4>
+<hr />
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <dl class="row">
+                <dt class="col-sm-4">
+                    Head Type
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.HeadType)
+                </dd>
 
-<div>
-    <h4>AttendanceHead</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HeadType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HeadType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Paid)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Paid)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsLeave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsLeave)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CarryForward)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CarryForward)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaxAllowed)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaxAllowed)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reimburse)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reimburse)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FromDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FromDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ToDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ToDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsInactive)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsInactive)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsDefault)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsDefault)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsHoliday)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsHoliday)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsHalfDay)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsHalfDay)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsHalfDayLeave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsHalfDayLeave)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Priority)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Priority)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsEncashment)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IsEncashment)
-        </dd>
-    </dl>
+                <dt class="col-sm-4">
+                    Description
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.Description)
+                </dd>
+                <dt class="col-sm-4">
+                    From Date
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.FromDate)
+                </dd>
+
+                <dt class="col-sm-4">
+                    To Date
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.ToDate)
+                </dd>
+
+                <dt class="col-sm-4">
+                    Max Allowed
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.MaxAllowed)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.Priority)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.Priority)
+                </dd>
+            </dl>
+        </div>
+
+        <div class="col-md-6">
+            <dl class="row">
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.Paid)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.Paid)
+                </dd>
+
+                <dt class="col-sm-4">
+                    Leave
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.IsLeave)
+                </dd>
+                <dt class="col-sm-4">
+                    Carry Forward
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.CarryForward)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.Reimburse)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.Reimburse)
+                </dd>
+                <dt class="col-sm-4">
+                    Deactive
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.IsInactive)
+                </dd>
+
+                <dt class="col-sm-4">
+                    Default
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.IsDefault)
+                </dd>
+
+                <dt class="col-sm-4">
+                    Holiday
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.IsHoliday)
+                </dd>
+
+                <dt class="col-sm-4">
+                    Half Day
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.IsHalfDay)
+                </dd>
+
+                <dt class="col-sm-4">
+                    Half Day Leave
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.IsHalfDayLeave)
+                </dd>                
+
+                <dt class="col-sm-4">
+                    Encashment
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.IsEncashment)
+                </dd>
+            </dl>
+        </div>
+    </div>
 </div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
+
+<style>
+    dl.row dt {
+        text-align: right;
+        padding-right: 10px; /* Space between label and value */
+    }
+
+    dl.row dd {
+        padding-left: 0; /* Remove left padding if needed */
+    }
+
+</style>
