--- a/Areas/HumanResource/Views/EAndDSettings/Delete.cshtml
+++ b/Areas/HumanResource/Views/EAndDSettings/Delete.cshtml
@@ -5,21 +5,44 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h4>Allowance And Deduction Setting</h4>
 
-<h3>Are you sure you want to delete this?</h3>
+<h6>Are you sure you want to delete this?</h6>
 <div>
-    <h4>EAndDSetting</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Query)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Query)
         </dd>
+        <dt class="col-sm-2">
+            Allowance
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Allowance.Name)
+        </dd>
+        <dt class="col-sm-2">
+            Deduction
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Deduction.Name)
+        </dd>
     </dl>
-    
+    <div>
+        <table class="table table-striped ">
+            <tr>
+                <th>Param Name</th>
+            </tr>
+            @foreach (var item in Model.EAndDSettingParams)
+            {
+                <tr>
+                    <td>@item.QueryParam</td>
+                </tr>
+            }
+        </table>
+    </div>
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
