--- a/Areas/HumanResource/Views/EAndDSettings/Details.cshtml
+++ b/Areas/HumanResource/Views/EAndDSettings/Details.cshtml
@@ -5,10 +5,8 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
-
 <div>
-    <h4>EAndDSetting</h4>
+    <h4>Allowance And Deduction Setting</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,7 +15,31 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Query)
         </dd>
+        <dt class="col-sm-2">
+            Allowance
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Allowance.Name)
+        </dd>
+        <dt class="col-sm-2">
+            Deduction
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Deduction.Name)
+        </dd>
     </dl>
+</div>
+<div>
+    <table class="table table-striped ">
+        <tr>
+            <th>Param Name</th> 
+        </tr> 
+        @foreach (var item in Model.EAndDSettingParams) {           
+           <tr>
+                <td>@item.QueryParam</td>
+           </tr>
+        }
+    </table>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
