--- a/Areas/HumanResource/Views/Allowances/Details.cshtml
+++ b/Areas/HumanResource/Views/Allowances/Details.cshtml
@@ -5,121 +5,57 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h5>Allowance Details</h5>
+<hr />
 
-<div>
-    <h4>Allowance</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CutOffType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CutOffType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Period)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Period)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DaysPresent)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DaysPresent)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AuthorisedLeave)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AuthorisedLeave)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GeneralHoliday)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GeneralHoliday)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CutOff)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CutOff)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RoundOf)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RoundOf)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccountID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccountID)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Month)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Month)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Day)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Day)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Variable)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Variable)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PayrollSlNO)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PayrollSlNO)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InActive)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InActive)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fixed)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fixed)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DebitTo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DebitTo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreditTo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreditTo)
-        </dd>
-    </dl>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <dl class="row">
+                <dt class = "col-sm-4">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class = "col-sm-8">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt class = "col-sm-4">
+                    @Html.DisplayNameFor(model => model.Description)
+                </dt>
+                <dd class = "col-sm-8">
+                    @Html.DisplayFor(model => model.Description)
+                </dd>        
+                <dt class = "col-sm-4">
+                    Payroll Rank
+                </dt>
+                <dd class = "col-sm-8">
+                    @Html.DisplayFor(model => model.PayrollSlNO)
+                </dd>
+            </dl>
+        </div>
+    
+        <div class="col-md-6">
+            <dl class="row">
+                <dt class="col-sm-4">
+                    Round Off
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.RoundOff)
+                </dd>
+                <dt class = "col-sm-4">
+                    Inactive
+                </dt>
+                <dd class = "col-sm-8">
+                    @Html.DisplayFor(model => model.InActive)
+                </dd>
+                <dt class = "col-sm-4">
+                    @Html.DisplayNameFor(model => model.Fixed)
+                </dt>
+                <dd class = "col-sm-8">
+                    @Html.DisplayFor(model => model.Fixed)
+                </dd>
+            </dl>
+        </div>
+    </div>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ID">Edit</a> |
