--- a/Areas/HumanResource/Views/AttendanceHeads/Delete.cshtml
+++ b/Areas/HumanResource/Views/AttendanceHeads/Delete.cshtml
@@ -5,8 +5,15 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@TempData["Alert"])
+        </div>
+    </div>
+</div>
 
-<h5>Are you sure you want to delete this?</h5>
+<h6>Are you sure you want to delete Attendance Head?</h6>
 <hr />
 <div class="container">
     <div class="row">
