--- a/Areas/HumanResource/Views/Deductions/Index.cshtml
+++ b/Areas/HumanResource/Views/Deductions/Index.cshtml
@@ -5,11 +5,16 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<div class="flex-header-container">
+    <div>
+        <h5>Deductions</h5>
+    </div>
+
+    <div>
+        <a asp-action="Create">Add New Deduction</a>
+    </div>
+</div>
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -19,49 +24,19 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Period)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CutOffType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CutOff)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RoundOf)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Month)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Day)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Variable)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AccountID)
+                @Html.DisplayNameFor(model => model.RoundOff)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OnYearlyIncome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Fixed)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PayRollSlNo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.InActive)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Fixed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DebitTo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreditTo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmployerDebitTo)
             </th>
             <th></th>
         </tr>
@@ -76,49 +51,31 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Period)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CutOffType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CutOff)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RoundOf)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Month)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Day)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Variable)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AccountID)
+                @Html.DisplayFor(modelItem => item.RoundOff)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.OnYearlyIncome)
             </td>
+                <td>
+                    @if (item.Fixed)
+                    {
+                        <span>Fixed</span>
+                    }
+                    else
+                    {
+                        <span>  </span>
+                    }
+                </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PayRollSlNo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.InActive)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fixed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DebitTo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreditTo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmployerDebitTo)
+                    @if(item?.InActive == false) {
+                    <span style="color:mediumseagreen;font-weight:bold">Active</span> }
+                    else
+                    {
+                        <span style="color:orangered;font-weight:bold"> Inactive </span>
+                    }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
