--- a/Areas/HumanResource/Views/EAndDSettings/Delete.cshtml
+++ b/Areas/HumanResource/Views/EAndDSettings/Delete.cshtml
@@ -5,7 +5,13 @@
     Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h4>Allowance And Deduction Setting</h4>
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@TempData["Alert"])
+        </div>
+    </div>
+</div>
 
 <h6>Are you sure you want to delete this?</h6>
 <div>
