--- a/Areas/HumanResource/Views/Grades/Create.cshtml
+++ b/Areas/HumanResource/Views/Grades/Create.cshtml
@@ -2,10 +2,16 @@
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@TempData["Alert"])
+        </div>
+    </div>
+</div>
 
 <h4>Grade</h4>
 <hr />
