--- a/Areas/HumanResource/Views/Grades/Delete.cshtml
+++ b/Areas/HumanResource/Views/Grades/Delete.cshtml
@@ -2,12 +2,11 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete Grade?</h5>
 <div>
     <h4>Grade</h4>
     <hr />
