--- a/Areas/HumanResource/Views/Grades/Details.cshtml
+++ b/Areas/HumanResource/Views/Grades/Details.cshtml
@@ -2,10 +2,10 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h5>Grade Details</h5>
 
 <div>
     <h4>Grade</h4>
