--- a/Areas/HumanResource/Views/Grades/Edit.cshtml
+++ b/Areas/HumanResource/Views/Grades/Edit.cshtml
@@ -2,12 +2,18 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<div class="row">
+    <div class="col-md-12">
+        <div class="form-group">
+            @Html.Raw(@TempData["Alert"])
+        </div>
+    </div>
+</div>
 
-<h4>Grade</h4>
+<h5>Edit Grade</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
