--- a/Areas/HumanResource/Views/Holidays/Delete.cshtml
+++ b/Areas/HumanResource/Views/Holidays/Delete.cshtml
@@ -2,15 +2,13 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h5>Are you sure you want to delete Holiday?</h5>
 
-<h3>Are you sure you want to delete this?</h3>
+<hr />
 <div>
-    <h4>Holidays</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.sDate)
@@ -40,10 +38,10 @@
             @Html.DisplayNameFor(model => model.HeadID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HeadID)
+            @Html.DisplayFor(model => model.Head.HeadType)
         </dd>
     </dl>
-    
+    <br>
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
