--- a/Areas/HumanResource/Views/Positions/Delete.cshtml
+++ b/Areas/HumanResource/Views/Positions/Delete.cshtml
@@ -2,15 +2,12 @@
 
 @{
     ViewData["Title"] = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h5>Are you sure you want to delete Position?</h5>
+<hr />
 <div>
-    <h4>Position</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PositionName)
