--- a/Areas/HumanResource/Views/Positions/Details.cshtml
+++ b/Areas/HumanResource/Views/Positions/Details.cshtml
@@ -2,14 +2,14 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/HumanResource/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h5>Position</h5>
+<hr />
 
 <div>
-    <h4>Position</h4>
-    <hr />
+   
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PositionName)
